ya instale tailwind

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import "../styles/global.css";
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -25,7 +28,7 @@
 				</a>
 			</div>
 			<div class="nav_right">
-				<a href="/educacion" class="text-3xl font-bold underline">Educacion</a>
+				<a href="/educacion" class="text-3xl font-bold underline text-cyan-400">Educacion</a>
 				<a href="/idiomas" class="text_titles text_color_light">Idiomas</a>
 				<a href="/certificaciones" class="text_titles text_color_light">Certificaciones</a>
 			</div>
