tailwind implementado en el layout :)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,28 +15,28 @@ import Layout from '../layouts/Layout.astro';
 			<div>
 				<div class="profile_info_bar">
 					<a href="https://github.com/adarlpz"><img src="/dist/img/github_logo_white.svg" width="25x"></a>
-					<p class="text_medium text_color_light" >BRANDON ADAIR LOPEZ LOPEZ</p>
+					<p class="text-xl font-bold text-white" >BRANDON ADAIR LOPEZ LOPEZ</p>
 				</div>
 
 				<div class="profile_info_bar">
 					<a href="https://github.com/adarlpz"><img src="/dist/img/github_logo_white.svg" width="25x"></a>
-					<p class="text_medium text_color_light" >08/05/2006</p>
+					<p class="text-xl font-bold text-white" >08/05/2006</p>
 				</div>
 
 				<div class="profile_info_bar">
 					<a href="https://github.com/adarlpz"><img src="/dist/img/maps_icon.svg" width="25x"></a>
-					<p class="text_medium text_color_light" >Jalisco, Mx.</p>
+					<p class="text-xl font-bold text-white" >Jalisco, Mx.</p>
 				</div>
 
 				<div class="profile_info_bar_button">
 					<a href="https://github.com/adarlpz"><img src="/dist/img/github_logo_white.svg" width="25x"></a>
-					<p class="text_medium text_color_light" >adarlopz.dev@gmail.com</p>
+					<p class="text-xl font-bold text-white" >adarlopz.dev@gmail.com</p>
 					<a href="https://github.com/adarlpz"><img src="/dist/img/copy_icon.svg" width="15px"></a>
 				</div>
 
 				<div class="profile_info_bar">
 					<a href="https://github.com/adarlpz"><img src="/dist/img/github_logo_white.svg" width="25x"></a>
-					<p class="text_medium text_color_light" >33 3036 2181</p>
+					<p class="text-xl font-bold  text-white" >33 3036 2181</p>
 				</div>
 				<div class="social_bar">
 					<a href="https://github.com/adarlpz"><img src="/dist/img/github_logo_white.svg" width="25x"></a>
@@ -44,7 +44,7 @@ import Layout from '../layouts/Layout.astro';
 				</div>
 			</div>
 			<div>
-				<p class="text_medium text_color_light" >Busco oportunidades para adquirir experiencia profesional que complemente mis estudios en desarrollo de software, diseño de interfaces y mantenimiento de computadoras</p>
+				<p class="text-xl font-bold text-white" >Busco oportunidades para adquirir experiencia profesional que complemente mis estudios en desarrollo de software, diseño de interfaces y mantenimiento de computadoras</p>
 			</div>
 		</div>
 	</div>
