--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import '../styles/global.css';
 import {ClientRouter} from 'astro:transitions';
 
 const currentYear = new Date().getFullYear();
@@ -41,7 +41,7 @@ const currentYear = new Date().getFullYear();
 			</div>
 		</header>
 
-		<main class="flex-1">
+		<main class="flex-1 t">
 			<slot />
 		</main>
 
