--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,23 +21,18 @@ const currentYear = new Date().getFullYear();
 	</head>
 	<body class="bg-[#001c2c] min-h-screen flex flex-col">
 
-		<header>
-			<div class="flex items-center relative w-5/6 justify-center p-12 h-3 m-auto max-w-96">
-				<div class="flex items-center absolute justify-between gap-14 right-2/3">
-					<a href="/proyectos" class="text-xl font-bold text-white">Proyectos</a>
-					<a href="/habilidades" class="text-xl font-bold text-white">Habilidades</a>
-					<a href="/experiencia" class="text-xl font-bold text-white">Experiencia</a>
-				</div>
-				<div class="absolute left-1/2 transform -translate-x-1/2">
-					<a href="/">
-						<img src="/dist/img/signature_white.svg" width="50px" alt="Imagen">
-					</a>
-				</div>
-				<div class="flex items-center absolute justify-between gap-14 left-2/3">
-					<a href="/educacion" class="text-xl font-bold text-white">Educacion</a>
-					<a href="/idiomas" class="text-xl font-bold text-white">Idiomas</a>
-					<a href="/certificaciones" class="text-xl font-bold text-white">Certificaciones</a>
-				</div>
+		<header class="flex flex-row justify-between items-center mx-10">
+			<div class="">
+				<a href="/">
+					<img src="/dist/img/signature_white.svg" width="50px" alt="Imagen">
+				</a>
+			</div>
+			<div class="flex flex-row gap-14">
+				<div><a href="/proyectos" class="text-xl font-bold text-white">Proyectos</a></div>
+				<div><a href="/habilidades" class="text-xl font-bold text-white">Habilidades</a></div>
+				<div><a href="/educacion" class="text-xl font-bold text-white">Educacion</a></div>
+				<div><a href="/idiomas" class="text-xl font-bold text-white">Idiomas</a></div>
+				<div><a href="/certificaciones" class="text-xl font-bold text-white">Certificaciones</a></div>
 			</div>
 		</header>
 
