avances y mas avances

--- a/src/components/section.astro
+++ b/src/components/section.astro
@@ -1,6 +1,6 @@
 ---
 const {id = "index"} = Astro.props;
 ---
-<section id={id} class="flex flex-col justify-center min-h-screen">
+<section id={id} class="flex flex-col justify-center py-24">
     <slot/>
 </section>
