--- a/src/components/titleSection.astro
+++ b/src/components/titleSection.astro
@@ -7,6 +7,6 @@ const { imageSrc, imageAlt, title } = Astro.props;
     <img src={imageSrc} alt={imageAlt} class="w-12" />
   </div>
   <div>
-    <p class="text-4xl font-semibold text-white">{title}</p>
+    <p class="text-4xl font-semibold text-primary">{title}</p>
   </div>
 </div>
