--- a/src/sections/about.astro
+++ b/src/sections/about.astro
@@ -10,7 +10,7 @@ import Section from "../components/section.astro";
             title="Sobre Mi"
     />
     <div>
-        <p class="text-2xl font-medium !m-0 text-white">Developer in training, with no professional experience but a
+        <p class="text-2xl font-medium !m-0 text-[#41766c]">Developer in training, with no professional experience but a
             great passion for programming and technology. Motivated by my learning, eager to grow and contribute my
             knowledge to innovative projects.</p>
     </div>
