--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -12,7 +12,7 @@ import Section from "../components/section.astro";
             title="Experiencia"
     />
     <div class="container mx-auto">
-        <div class="relative border-l-4 border-[#096871] ml-5">
+        <div class="relative border-l-4 border-primary ml-5">
             <Epam/>
             <Freelance/>
         </div>
