--- a/src/sections/experiences/freelance.astro
+++ b/src/sections/experiences/freelance.astro
@@ -1,26 +1,24 @@
-<div class="relative pl-16 mb-12 group">
+<div class="relative pl-16 group">
     <div class="absolute left-[-0.6rem] top-[0.5rem] z-20">
-        <div class="w-4 h-4 bg-green-500 rounded-full flex items-center justify-center text-xs font-semibold text-transparent
+        <div class="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent
                     transition-all duration-500 ease-in-out
                     group-hover:w-16 group-hover:h-7
-                    group-hover:text-white group-hover:bg-green-500 group-hover:shadow-md
-                    text-white">
-            2025
+                    group-hover:text-white group-hover:bg-primary group-hover:shadow-md">
+            2022
         </div>
     </div>
     <div class="flex flex-row justify-between">
         <div>
-            <p class="text-2xl font-semibold text-white">EPAM Systems</p>
-            <p class="text-lg font-medium text-white">JS Internship</p>
-            <p class="mt-2 text-base text-gray-300">
+            <p class="text-2xl font-semibold text-secondary">Freelance</p>
+            <p class="text-lg font-medium text-secondary">Desarrollo Web y movil</p>
+            <p class="mt-2 text-neutral">
                 Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de
                 aplicaciones web. Mejora de un 30% en la entrega de software.
-                Implantacióne de medidas de integración continua y despliegue con A/B testing en más de
+                Implantación de medidas de integración continua y despliegue con A/B testing en más de
                 15 equipos.
             </p>
         </div>
-        <div>
-            <img src="/dist/logos/epam_logo.svg" class="h-16" alt="EPAM Logo"/>
+        <div class="w-48 h-16">
         </div>
     </div>
 </div>
