se añadieron previews temporales

--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -17,7 +17,7 @@ import Section from "../components/section.astro";
 
             <!-- Imagen del proyecto -->
             <div class="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center">
-                <img src="/dist/images/proyecto1_demo.png" alt="Preview Densora" class="object-cover w-full h-full"/>
+                <img src="/dist/demos/tekkure_demo.jpg" alt="Preview Densora" class="object-cover w-full h-full"/>
             </div>
 
             <!-- Detalles del proyecto -->
@@ -64,7 +64,7 @@ import Section from "../components/section.astro";
 
             <!-- Imagen del proyecto -->
             <div class="w-full md:w-1/2 h-[250px] bg-white rounded-xl overflow-hidden flex items-center justify-center">
-                <img src="/dist/images/proyecto2_demo.png" alt="Preview Tekkure" class="object-cover w-full h-full"/>
+                <img src="/dist/demos/tekkure_demo.jpg" alt="Preview Tekkure" class="object-cover w-full h-full"/>
             </div>
 
             <!-- Detalles del proyecto -->
