--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -15,7 +15,7 @@ import Section from "../components/section.astro";
                 <div class="relative w-24 h-24  transition-transform duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]">
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl  p-4 flex items-center justify-center [backface-visibility:hidden]">
-                        <img src="/dist/logos/c++_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
+                        <img src="/dist/logos/cpp_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
                     </div>
 
                     <div class="absolute inset-0 bg-backgroundSecondary rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
